--- a/verify/inspec.yml
+++ b/verify/inspec.yml
@@ -1,8 +1,8 @@
-name: tf-test
-title: InSpec Profile
+name: kops-init
+title: kops init terraform
 maintainer: The Authors
 copyright: The Authors
-copyright_email: you@example.com
+copyright_email: gmead@oteemo.com
 license: Apache-2.0
-summary: An InSpec Compliance Profile
+summary: An InSpec Test profile that asserts terraform modules
 version: 0.1.0
